crates/sdk-tests/tests/app/declaring_union_not_allowed.rs
use svm_sdk::app;

#[app]
mod my_app {
    union U {}
}

fn main() {}
